# akamai-functions-samples

./: README.md
samples/ab-testing-cookie/origin-a/: Cargo.toml
samples/ab-testing-kv/traffic-router/: Cargo.toml
samples/ai-sentiment-analysis-ollama/: package-lock.json  package.json
samples/block-by-country/: build.mjs  package-lock.json  package.json
samples/block-by-country/src/: index.js
samples/block-by-ip/: build.mjs  package-lock.json  package.json
samples/block-by-ip/src/: index.js
samples/geo-ip/: Cargo.toml  spin.toml
samples/html-rewrite/html-rewrite-rust/: Cargo.toml
samples/html-rewrite/html-rewrite-ts/: build.mjs  package-lock.json  package.json  spin.toml
samples/html-rewrite/html-rewrite-ts/src/: index.ts
samples/limit-access/: package-lock.json  package.json
samples/limit-access/src/: index.ts
samples/read-post/: package-lock.json  package.json
samples/todo-mvc/frontend/: index.html  package-lock.json  package.json
samples/traffic-splitting/: spin.toml
samples/traffic-splitting/api/: package-lock.json  package.json
samples/traffic-splitting/ui/: package-lock.json  package.json
samples/vinext-pages-router/: package-lock.json  package.json
tutorials/mysql-tutorial/: package-lock.json  package.json
tutorials/supabase-proxy-tutorial/: package-lock.json
